[gd_scene load_steps=21 format=3 uid="uid://djvlq7vitsq5d"]

[ext_resource type="Theme" uid="uid://bro4f0agqms1f" path="res://Resource/Themes/BattleScreen.tres" id="1_3047d"]
[ext_resource type="Script" uid="uid://bi7ih57unyef8" path="res://Scripts/battle_screen.gd" id="1_yqk0y"]
[ext_resource type="Texture2D" uid="uid://dadqoi2l8vlfc" path="res://icon.svg" id="2_duuuk"]
[ext_resource type="Script" uid="uid://clawuxk1t3w8x" path="res://Scripts/battle_manager.gd" id="2_mkoka"]
[ext_resource type="Resource" uid="uid://dsdbty3rtb8ab" path="res://Resource/Mons/pinga_resource.tres" id="3_kgujr"]
[ext_resource type="PackedScene" uid="uid://cfqma0hpenssn" path="res://Scenes/button.tscn" id="4_bom31"]
[ext_resource type="Resource" uid="uid://blgxf8omfcvvt" path="res://Resource/Mons/player_starter.tres" id="5_c0tof"]
[ext_resource type="Script" uid="uid://bh6irafj7ye2a" path="res://Scripts/enemy_mons.gd" id="7_oy1qo"]
[ext_resource type="Script" uid="uid://d4npjmqdyxgix" path="res://Scripts/attack_button.gd" id="7_ux0bu"]
[ext_resource type="Script" uid="uid://b6qwecaxkoip4" path="res://Scripts/player_mons.gd" id="8_frou7"]
[ext_resource type="Script" uid="uid://bypf6rfqdnim0" path="res://Scripts/attack_menu_buttons.gd" id="9_4wdh8"]
[ext_resource type="Script" uid="uid://cf3131khlp1qo" path="res://Scripts/move_slot_button.gd" id="10_qny7e"]
[ext_resource type="Script" uid="uid://dwmpep1dav81y" path="res://Scripts/items_button.gd" id="11_c0tof"]
[ext_resource type="Script" uid="uid://c32x2dfxy248r" path="res://Scripts/dialog_text.gd" id="12_oy1qo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3047d"]
bg_color = Color(0.22, 0.22, 0.1386, 0.227451)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_duuuk"]
Panel/styles/panel = SubResource("StyleBoxFlat_3047d")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkoka"]
bg_color = Color(0.113725, 0.215686, 0.160784, 1)
border_width_top = 5
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_bom31"]
Panel/styles/panel = SubResource("StyleBoxFlat_mkoka")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_638wx"]
bg_color = Color(0.113725, 0.215686, 0.160784, 1)

[sub_resource type="Theme" id="Theme_0c6le"]
Panel/styles/panel = SubResource("StyleBoxFlat_638wx")

[node name="BattleScreen" type="CanvasLayer"]
script = ExtResource("1_yqk0y")

[node name="BattleManager" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3047d")
script = ExtResource("2_mkoka")
enemy_mon_resource = ExtResource("3_kgujr")
player_mon_resource = ExtResource("5_c0tof")

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager"]
layout_mode = 2
theme = ExtResource("1_3047d")

[node name="EnemyPanel" type="Panel" parent="BattleManager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_duuuk")

[node name="EnemyMons" type="Sprite2D" parent="BattleManager/VBoxContainer/EnemyPanel"]
unique_name_in_owner = true
position = Vector2(516.875, 79.2363)
scale = Vector2(0.810547, 0.867285)
texture = ExtResource("2_duuuk")
script = ExtResource("7_oy1qo")

[node name="EnemyProgressBar" type="ProgressBar" parent="BattleManager/VBoxContainer/EnemyPanel/EnemyMons"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.284
offset_top = -61.3971
offset_right = 54.7157
offset_bottom = -29.3971
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_3047d")

[node name="EnemyProgressBarTimer" type="Timer" parent="BattleManager/VBoxContainer/EnemyPanel/EnemyMons/EnemyProgressBar"]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="EnemyHealthBar" type="ProgressBar" parent="BattleManager/VBoxContainer/EnemyPanel/EnemyMons"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.557
offset_top = -99.4324
offset_right = 75.4434
offset_bottom = -67.4324
grow_horizontal = 2
theme = ExtResource("1_3047d")

[node name="EnemyMonsName" type="Label" parent="BattleManager/VBoxContainer/EnemyPanel/EnemyMons"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = -123.0
offset_right = -44.0
offset_bottom = -100.0
grow_horizontal = 2
text = "Name"

[node name="PlayerPanel" type="Panel" parent="BattleManager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_bom31")

[node name="PlayerMons" type="Sprite2D" parent="BattleManager/VBoxContainer/PlayerPanel"]
unique_name_in_owner = true
position = Vector2(93.8, 80.8)
scale = Vector2(0.83125, 0.83125)
texture = ExtResource("2_duuuk")
script = ExtResource("8_frou7")

[node name="PlayerProgressBar" type="ProgressBar" parent="BattleManager/VBoxContainer/PlayerPanel/PlayerMons"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -53.0
offset_right = 38.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_3047d")
step = 1.0
rounded = true

[node name="PlayerProgressBarTimer" type="Timer" parent="BattleManager/VBoxContainer/PlayerPanel/PlayerMons/PlayerProgressBar"]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="PlayerHealthBar" type="ProgressBar" parent="BattleManager/VBoxContainer/PlayerPanel/PlayerMons"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_top = -100.0
offset_right = 29.0
offset_bottom = -68.0
grow_horizontal = 2
theme = ExtResource("1_3047d")

[node name="BattleMenu" type="Panel" parent="BattleManager/VBoxContainer/PlayerPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.405
anchor_top = 0.035
anchor_right = 0.989
anchor_bottom = 1.0
offset_left = -0.200012
offset_top = 0.0500002
offset_right = 0.039978
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_0c6le")

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BattleMenuButtons" type="GridContainer" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Attack" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/BattleMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"
script = ExtResource("7_ux0bu")

[node name="Items" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/BattleMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
text = "Items
"
script = ExtResource("11_c0tof")

[node name="Mons" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/BattleMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
text = "Mons"
text_overrun_behavior = 2
autowrap_mode = 2
icon_alignment = 1

[node name="Run" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/BattleMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
text = "Run
"

[node name="AttackMenuButtons" type="GridContainer" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2
script = ExtResource("9_4wdh8")

[node name="MoveSlot1" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/AttackMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_qny7e")

[node name="MoveSlot2" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/AttackMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_qny7e")

[node name="MoveSlot3" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/AttackMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_qny7e")

[node name="MoveSlot4" parent="BattleManager/VBoxContainer/PlayerPanel/BattleMenu/MarginContainer/AttackMenuButtons" instance=ExtResource("4_bom31")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_qny7e")

[node name="DialogDisplay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 10

[node name="DialogLabel" type="RichTextLabel" parent="DialogDisplay"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Dialog Text"
fit_content = true
scroll_following = true
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_oy1qo")

[node name="DebugLable" type="RichTextLabel" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.623
anchor_bottom = 0.5
offset_right = 0.279968
offset_bottom = -2.0
